--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -82,9 +82,10 @@ jobs:
             os: macos-latest
             name: macos-arm64
 
+          # armv7
           - target: armv7-unknown-linux-gnueabihf
-              os: ubuntu-latest
-              name: linux-armv7     
+            os: ubuntu-latest
+            name: linux-armv7     
 
     steps:
       - name: Checkout code
